# zapret-discord-youtube

./: Cargo.toml  README.RU.md  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml
add_to_autorun/: Cargo.toml  build.rs
add_to_autorun/src/: main.rs  service.rs  ui.rs  utils.rs
cmd/add_to_autorun/: add_to_autorun.go
cmd/check_for_updates/: check_for_updates.go
cmd/preconfig_tester/: preconfig_tester.go
cmd/run_preconfig/: run_preconfig.go
cmd/select_domains/: select_domains.go
lists/: list-cloudflare.txt  list-russia-blacklist.txt  list-ubisoft.txt
make_release/: Cargo.toml  build.rs
make_release/src/: main.rs  utils.rs
pre-configs/: CloudflareFix (ALT v2).bat  CloudflareFix (ALT v3).bat  CloudflareFix (ALT v4).bat  CloudflareFix (ALT).bat  CloudflareFix (Beeline).bat  CloudflareFix (Extended).bat  CloudflareFix (MGTS).bat  CloudflareFix (Rostelekom).bat  CloudflareFix (Universal).bat  CloudflareFix.bat  DiscordFix (ALT v10).bat  DiscordFix (ALT v11).bat  DiscordFix (ALT v12).bat  DiscordFix (ALT v13).bat  DiscordFix (ALT v2).bat  DiscordFix (ALT v3).bat  DiscordFix (ALT v4).bat  DiscordFix (ALT v5).bat  DiscordFix (ALT v6).bat  DiscordFix (ALT v7).bat  DiscordFix (ALT v8).bat  DiscordFix (ALT v9).bat  DiscordFix (ALT).bat  DiscordFix (Beeline, Rostelekom, Infolink).bat  GeneralFix (ALT).bat  GeneralFix (ALT2).bat  GeneralFix (ALT3).bat  GeneralFix (ALT4).bat  GeneralFix (ALT5).bat  GeneralFix (MGTS).bat  GeneralFix (MGTS2).bat  GeneralFix.bat  RussiaFix (ALT).bat  RussiaFix (Rostelekom).bat  RussiaFix.bat  UbisoftFix (ALT).bat  UbisoftFix.bat  UltimateFix (ALT v10).bat  UltimateFix (ALT v11).bat  UltimateFix (ALT v12).bat  (+38 more)
preconfig_tester/: Cargo.toml  build.rs
preconfig_tester/src/: config.rs  domains.rs  error.rs  main.rs  network.rs  process.rs  utils.rs
resources/: ___README.TXT
run_preconfig/: Cargo.toml  build.rs
run_preconfig/src/: main.rs  ui.rs  utils.rs
scripts/: build.bat  build.go
select_domains/: Cargo.toml  build.rs
select_domains/src/: main.rs
shared/: Cargo.toml
shared/src/: terminal.rs
