[workspace]
resolver = "2"
members = [
    "add_to_autorun",
    "make_release",
    "preconfig_tester",
    "run_preconfig",
    "select_domains", "shared",
]

[workspace.package]
version = "1.1.0"

[workspace.dependencies]
# Used for embedding resources in the executable
winresource = "0.1.19"
# Used for tui
crossterm = "0.28.1"
