[package]
name = "add_to_autorun"
version.workspace = true
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_autorunner.exe"

[dependencies]
crossterm.workspace = true
ctrlc = "3.4.1"
regex = "1.11.1"

[build-dependencies]
winresource.workspace = true
