[package]
name = "make_release"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_make_release.exe"

[dependencies]
dunce = "1.0.5"
fs_extra = "1.3.0"
spinners = "4.1.1"
zip = "2.2.1"
walkdir = "2.5.0"
anyhow = "1.0.93"

[build-dependencies]
# Used for embedding resources in the executable
winresource = "0.1.18"
