[package]
name = "preconfig_tester"
version.workspace = true
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_preconfig_tester.exe"

[dependencies]
sysinfo = "0.33.0"
native-tls = "0.2.12"
ureq = { version = "2.12.1", features = ["tls"] }
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "securitybaseapi",
    "winnt",
    "minwindef",
] }
termcolor = "1.4.1"

[build-dependencies]
winresource.workspace = true
