[package]
name = "run_preconfig"
edition = "2021"
version.workspace = true

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_run_preconfig.exe"

[dependencies]
crossterm = "0.28.1"
ctrlc = "3.4.1"

[build-dependencies]
# Used for embedding resources in the executable
winresource = "0.1.18"
