[package]
name = "run_preconfig"
edition = "2021"
version.workspace = true

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_run_preconfig.exe"

[dependencies]
crossterm.workspace = true
ctrlc = "3.4.1"
shared = { path = "../shared" }

[build-dependencies]
winresource.workspace = true
