[package]
name = "select_domains"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_select_domains.exe"

[dependencies]
crossterm = "0.28.1"

[build-dependencies]
# Used for embedding resources in the executable
winresource = "0.1.18"
