[package]
name = "select_domains"
version.workspace = true
edition = "2021"
build = "build.rs"

[package.metadata.winresource]
LegalCopyright = "2024 by ANKDDEV"
OriginalFilename = "zapret_select_domains.exe"

[dependencies]
crossterm.workspace = true

[build-dependencies]
winresource.workspace = true
